# miden-signed-intents

./: .gitignore
docs/superpowers/plans/: 2026-06-18-signed-intents-tutorial.md
docs/superpowers/specs/: 2026-06-18-signed-intents-tutorial-design.md
signed-intents/: Cargo.toml  TUTORIAL.md
signed-intents/docs/superpowers/plans/: 2026-06-21-signed-intents-core-showcase.md  2026-06-21-signed-intents-plan2-storage-map.md
signed-intents/docs/superpowers/specs/: 2026-06-19-signed-intents-redesign-design.md
signed-intents/masm/: authorizer.masm  ecdsa_spike.masm  operator.masm  spike_plan2.masm
signed-intents/src/: intent.rs  lib.rs  relayer.rs  user_account.rs
signed-intents/tests/: adversarial.rs  authorizer.rs  e2e_ts_to_masm.rs  golden.rs  happy_path.rs  multi_depositor.rs  spike.rs  spike_plan2_auth.rs  spike_plan2_map.rs  walkthrough.rs  walkthrough_ts.rs
signed-intents/tests/fixtures/: intent_signed.json
signed-intents/ts/: demo.ts  gen-fixture.ts  package-lock.json  package.json  signIntent.test.ts  signIntent.ts  vitest.config.ts  vitest.setup.ts  wasmFetch.ts  wt-export-key.ts  wt-sign-intent.ts
